--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve",
     "watch": "webpack --watch",
     "build-prod": "NODE_ENV=production webpack",
-    "build-dev": "webpack"
+    "build-dev": "webpack",
+    "clean": "rm -rf dist"
   },
   "repository": {
     "type": "git",
